namespace IsuExtra.Entities
{
    public class Classroom
    {
        public Classroom(int number)
        {
            Number = number;
        }

        public int Number { get; }
    }
}