using System.Collections.Generic;
using Isu.Lessons;
using IsuExtra.Lessons;

namespace IsuExtra.Entities
{
    public class Stream
    {
        public List<Lesson> Lessons { get; }
    }
}