using Isu.Models;

namespace IsuExtra.Entities
{
    public class Teacher : Person
    {
        public Teacher(string name, int id)
            : base(name, id)
        {
        }
    }
}